# NeoBirch

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build-ubuntu.yml  build-windows.yml
include/: AssetManager.h  AudioMixer.h  Collision.h  Config.h  Game.h  Map.h  TextureManager.h  Vector2D.h
include/ECS/: Animation.h  CameraSystem.h  ColliderComponent.h  Components.h  Cursor.h  ECS.h  GamepadController.h  HealthComponent.h  KeyboardController.h  PhysicsSystem.h  ProjectileComponent.h  ProjectileSystem.h  ShootingComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UILabel.h
src/: AssetManager.cpp  AudioMixer.cpp  Collision.cpp  Game.cpp  Map.cpp  TextureManager.cpp  Vector2D.cpp  main.cpp
src/ECS/: ECS.cpp
src/source/: Game.cpp  Game.h  Vector2D.cpp  Vector2D.h  main.cpp
src/source/ECS/: ECS.h  KeyboardController.h  ProjectileComponent.h  ShootingComponent.h  UILabel.h
test/: CMakeLists.txt  ComponentsTest.cpp  ComponentsTest.h  main.cpp  testComponents.cpp  testVector2D.cpp
